Apply java language version migration aids